# order-platform-msa-infer-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
data/: consumed_orders.csv
kafka_consumer/: Dockerfile  kafka_consumer.py
