[project]
name = "order-platform-msa-infer-pipeline"
version = "0.1.0"
description = "Inference service for order platform forecasting (FastAPI + AutoGluon)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "mlflow>=3.3.2",
    "autogluon.timeseries>=1.1.1",
    "boto3>=1.34.158",
    "s3fs>=2024.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6.8",
    "pytest>=8.3.3",
]


